Add module installation alias support and update documentation
- Introduced `--name` option for `modules install` and `modules add` commands to allow local name overrides.
- Updated command reference and help text to include new alias option.
- Added a new skill for generating weekly updates based on git history.
- Enhanced changelog with recent changes related to module installation.